--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,20 @@
   "cleanUrls": true,
   "headers": [
     {
-      "source": "/(.*)",
+      "source": "/output.m3u8",
       "headers": [
         { "key": "Access-Control-Allow-Origin", "value": "*" },
         { "key": "Content-Type", "value": "application/vnd.apple.mpegurl" }
       ]
     },
     {
-      "source": "/.*\\.ts",
+      "source": "/output0.ts",
+      "headers": [
+        { "key": "Content-Type", "value": "video/mp2t" }
+      ]
+    },
+    {
+      "source": "/output1.ts",
       "headers": [
         { "key": "Content-Type", "value": "video/mp2t" }
       ]
